[tool.poetry]
name = "rbm"
version = "0.1.0"
description = ""
authors = ["torataro-tiger <121601488+torataro-tiger@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
matplotlib = "^3.10.0"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
